welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail: error: type mismatch;
 found   : java.awt.Color
 required: String
		hunt(getParam(0).asInstanceOf[Color]); 
                                             ^SlugSnail:5: error: value couleur is not a member of object java.awt.Color
    if (getCouleurSol()==Color.couleur){
                               ^